--- a/Report/Views/Home/Index.cshtml
+++ b/Report/Views/Home/Index.cshtml
@@ -34,4 +34,10 @@
     <li>
         <hr />
     </li>
+    <li style="font-size: 2em; border: 1px solid yellowgreen; border-radius: 10px; padding: 15px">
+        <a href="@Url.Action("Reporting","Home")" class="btn btn-lg btn-success" id="simple2"> گزارشگیری با استفاده از کلاس از پیش تعریف شده</a> <span class="label label-info" for="simple2">(مستقیم با نام پیش فرض)</span>
+    </li>
+    <li>
+        <hr />
+    </li>
 </ul>
