--- a/Report/Views/Home/Index.cshtml
+++ b/Report/Views/Home/Index.cshtml
@@ -16,12 +16,6 @@
     <li>
         <hr />
     </li>
-    <li style="font-size: 2em; border: 1px solid darkolivegreen; border-radius: 10px; padding: 15px">
-        <a href="@Url.Action("Group","Home")" class="btn btn-lg btn-success" id="simple2">گروه بندی</a> <span class="label label-info" for="simple2">(مستقیم با نام پیش فرض)</span>
-    </li>
-    <li>
-        <hr />
-    </li>
     <li style="font-size: 2em; border: 1px solid moccasin; border-radius: 10px; padding: 15px">
         <a href="@Url.Action("Headers","Home")" class="btn btn-lg btn-success" id="simple2">سر برگ</a> <span class="label label-info" for="simple2">(مستقیم با نام پیش فرض)</span>
     </li>
@@ -36,6 +30,12 @@
     </li>
     <li style="font-size: 2em; border: 1px solid yellowgreen; border-radius: 10px; padding: 15px">
         <a href="@Url.Action("Reporting","Home")" class="btn btn-lg btn-success" id="simple2"> گزارشگیری با استفاده از کلاس از پیش تعریف شده</a> <span class="label label-info" for="simple2">(مستقیم با نام پیش فرض)</span>
+    </li>
+    <li>
+        <hr />
+    </li>
+    <li style="font-size: 2em; border: 1px solid forestgreen; border-radius: 10px; padding: 15px">
+        <a href="@Url.Action("Grouping","Home")" class="btn btn-lg btn-success" id="simple2"> گزارشگیری گروه بندی شده</a> <span class="label label-info" for="simple2">(مستقیم با نام پیش فرض)</span>
     </li>
     <li>
         <hr />
