--- a/Report/Views/Home/Iframe.html
+++ b/Report/Views/Home/Iframe.html
@@ -1,8 +1,4 @@
-﻿@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head>
@@ -11,7 +7,7 @@
 </head>
 <body>
 
-    <iframe width="100%" src="PdfHandler.ashx" height="100%"></iframe>
+    <iframe width="100%" src="../../Pdf/PdfHandler" height="500"></iframe>
 
 </body>
 </html>
