Create Tax Balances

--- a/Report/Views/Home/Index.cshtml
+++ b/Report/Views/Home/Index.cshtml
@@ -40,6 +40,24 @@
     <li>
         <hr />
     </li>
+    <li style="font-size: 2em; border: 1px solid red; border-radius: 10px; padding: 15px">
+        <a href="@Url.Action("TotalBalance","Home")" class="btn btn-lg btn-success" id="simple2"> تراز کل</a> <span class="label label-info" for="simple2">(مستقیم با نام پیش فرض)</span>
+    </li>
+    <li>
+        <hr />
+    </li>
+    <li style="font-size: 2em; border: 1px solid lavender; border-radius: 10px; padding: 15px">
+        <a href="@Url.Action("CertainBalance","Home")" class="btn btn-lg btn-success" id="simple2"> تراز معین</a> <span class="label label-info" for="simple2">(مستقیم با نام پیش فرض)</span>
+    </li>
+    <li>
+        <hr />
+    </li>
+    <li style="font-size: 2em; border: 1px solid khaki; border-radius: 10px; padding: 15px">
+        <a href="@Url.Action("DetailedBalance","Home")" class="btn btn-lg btn-success" id="simple2"> تراز تفصیلی</a> <span class="label label-info" for="simple2">(مستقیم با نام پیش فرض)</span>
+    </li>
+    <li>
+        <hr />
+    </li>
     <li style="font-size: 2em; border: 1px solid lightcoral; border-radius: 10px; padding: 15px">
         <a href="@Url.Action("Printing","Home")" class="btn btn-lg btn-success" id="simple2"> ترکیب گزارش های و چاپ مستقیم</a>
     </li>
